--- a/package.json
+++ b/package.json
@@ -21,13 +21,13 @@
   },
   "homepage": "https://github.com/GoogleChrome/tti-polyfill#readme",
   "devDependencies": {
+    "@ampproject/rollup-plugin-closure-compiler": "0.10.0",
     "chalk": "^1.1.3",
     "eslint": "^4.0.0",
     "eslint-config-google": "^0.8.0",
     "fs-extra": "^3.0.1",
-    "google-closure-compiler": "20190929.0.0",
     "gzip-size": "^3.0.0",
-    "rollup": "^0.41.6",
+    "rollup": "1.23.1",
     "rollup-plugin-node-resolve": "^3.0.0",
     "source-map": "^0.5.6"
   }
